--- a/MyerSplash/ResourceDictionary/StyleDictionary.xaml
+++ b/MyerSplash/ResourceDictionary/StyleDictionary.xaml
@@ -1,24 +1,25 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-                    xmlns:cc="using:MyerSplashCustomControl"
-                    xmlns:fcu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:cc="using:MyerSplashCustomControl"
+    xmlns:fcu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)">
     <FontFamily x:Key="PhoneFontFamilyNormal">Segoe WP</FontFamily>
     <FontWeight x:Key="PhoneButtonFontWeight">Semibold</FontWeight>
     <SolidColorBrush x:Key="ButtonDisabledBackgroundThemeBrush" Color="Transparent" />
     <Style x:Key="SettingItemButtonContentStyle" TargetType="TextBlock">
         <Setter Property="Margin" Value="{StaticResource SettingsButtonMargin}" />
-        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="HorizontalAlignment" Value="Left" />
         <Setter Property="Foreground" Value="White" />
-        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="FontSize" Value="14" />
     </Style>
     <Style x:Key="SettingItemTextBlockStyle" TargetType="TextBlock">
         <Setter Property="Margin" Value="12,12,0,0" />
         <Setter Property="Foreground" Value="White" />
-        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="FontSize" Value="14" />
     </Style>
     <Style x:Key="SettingItemComboBoxStyle" TargetType="ComboBox">
         <Setter Property="Margin" Value="12,12,12,0" />
-        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="FontSize" Value="14" />
         <Setter Property="Foreground" Value="White" />
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="RequestedTheme" Value="Dark" />
@@ -38,24 +39,30 @@
         <Setter Property="FontFamily" Value="Segoe MDL2 Assets" />
         <Setter Property="FontWeight" Value="Black" />
     </Style>
-    <fcu:Style x:Key="MainButtonStyle" TargetType="Button" BasedOn="{StaticResource ButtonRevealStyle}">
-        <Setter Property="BorderThickness" Value="{StaticResource RevealThinkness}"/>
-        <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="RequestedTheme" Value="Dark"/>
+    <fcu:Style
+        x:Key="MainButtonStyle"
+        BasedOn="{StaticResource ButtonRevealStyle}"
+        TargetType="Button">
+        <Setter Property="BorderThickness" Value="{StaticResource RevealThinkness}" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="RequestedTheme" Value="Dark" />
     </fcu:Style>
-    <Style x:Key="MainButtonCompatStyle" TargetType="Button" BasedOn="{StaticResource ListButtonStyle}"/>
+    <Style
+        x:Key="MainButtonCompatStyle"
+        BasedOn="{StaticResource ListButtonStyle}"
+        TargetType="Button" />
     <Style x:Key="MainFabStyle" TargetType="cc:EllipseShadowControl">
-        <Setter Property="Width" Value="46"/>
-        <Setter Property="Height" Value="46"/>
-        <Setter Property="Radius" Value="19"/>
-        <Setter Property="ForeColor" Value="White"/>
+        <Setter Property="Width" Value="46" />
+        <Setter Property="Height" Value="46" />
+        <Setter Property="Radius" Value="19" />
+        <Setter Property="ForeColor" Value="White" />
     </Style>
     <Style x:Key="SearchTextBoxStyle" TargetType="TextBox">
         <Setter Property="MinWidth" Value="{ThemeResource TextControlThemeMinWidth}" />
         <Setter Property="MinHeight" Value="{ThemeResource TextControlThemeMinHeight}" />
         <Setter Property="Foreground" Value="{ThemeResource SystemControlForegroundBaseHighBrush}" />
         <Setter Property="Background" Value="{ThemeResource SystemControlBackgroundAltHighBrush}" />
-        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="FontSize" Value="14" />
         <Setter Property="BorderBrush" Value="{ThemeResource SystemControlForegroundChromeDisabledLowBrush}" />
         <Setter Property="SelectionHighlightColor" Value="{ThemeResource SystemControlHighlightAccentBrush}" />
         <Setter Property="BorderThickness" Value="{ThemeResource TextControlBorderThemeThickness}" />
@@ -524,6 +531,7 @@
                                 <VisualState x:Name="Normal" />
                                 <VisualState x:Name="PointerOver">
                                     <Storyboard>
+                                        <PointerUpThemeAnimation Storyboard.TargetName="RootGrid" />
                                         <DoubleAnimation
                                             Storyboard.TargetName="ContentPresenter"
                                             Storyboard.TargetProperty="(UIElement.Opacity)"
@@ -533,6 +541,7 @@
                                 </VisualState>
                                 <VisualState x:Name="Pressed">
                                     <Storyboard>
+                                        <PointerDownThemeAnimation Storyboard.TargetName="RootGrid" />
                                         <DoubleAnimation
                                             Storyboard.TargetName="ContentPresenter"
                                             Storyboard.TargetProperty="(UIElement.Opacity)"
@@ -1323,7 +1332,7 @@
         <Setter Property="MinWidth" Value="154" />
         <Setter Property="Foreground" Value="White" />
         <Setter Property="RequestedTheme" Value="Dark" />
-        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="FontSize" Value="14" />
         <Setter Property="OnContent" Value="On" />
         <Setter Property="OffContent" Value="Off" />
         <Setter Property="HorizontalAlignment" Value="Right" />
