Make title text in dialog consistent

--- a/MyerSplash/ResourceDictionary/DimentionDictionary.xaml
+++ b/MyerSplash/ResourceDictionary/DimentionDictionary.xaml
@@ -19,4 +19,5 @@
     <x:Double x:Key="DialogWidth">400</x:Double>
     <x:Double x:Key="SettingsSwitchItemHeight">48</x:Double>
     <Thickness x:Key="ButtonsStackMargin">2</Thickness>
+    <x:Double x:Key="DialogTitleFontSize">20</x:Double>
 </ResourceDictionary>
