--- a/MyerSplash/ResourceDictionary/StyleDictionary.xaml
+++ b/MyerSplash/ResourceDictionary/StyleDictionary.xaml
@@ -6,6 +6,13 @@
     <FontFamily x:Key="PhoneFontFamilyNormal">Segoe WP</FontFamily>
     <FontWeight x:Key="PhoneButtonFontWeight">Semibold</FontWeight>
     <SolidColorBrush x:Key="ButtonDisabledBackgroundThemeBrush" Color="Transparent" />
+    <Style x:Key="DialogTitleStyle" TargetType="TextBlock">
+        <Setter Property="Margin" Value="12,12,0,0" />
+        <Setter Property="Foreground" Value="{StaticResource MyerSplashThemeColorBrush}" />
+        <Setter Property="FontSize" Value="{StaticResource DialogTitleFontSize}" />
+        <Setter Property="FontWeight" Value="Bold" />
+        <Setter Property="HorizontalAlignment" Value="Left" />
+    </Style>
     <Style x:Key="SettingItemButtonContentStyle" TargetType="TextBlock">
         <Setter Property="Margin" Value="{StaticResource SettingsButtonMargin}" />
         <Setter Property="HorizontalAlignment" Value="Left" />
