--- a/MyerSplash/View/Uc/Dialog/BackgroundHintDialog.xaml
+++ b/MyerSplash/View/Uc/Dialog/BackgroundHintDialog.xaml
@@ -13,13 +13,7 @@
     mc:Ignorable="d">
     <Grid Background="{ThemeResource SystemControlChromeLowAcrylicElementBrush}" CornerRadius="2">
         <StackPanel Margin="8">
-            <TextBlock
-                Margin="12,12,0,0"
-                HorizontalAlignment="Left"
-                FontSize="20"
-                FontWeight="Bold"
-                Foreground="{StaticResource MyerSplashThemeColorBrush}"
-                Text="HOW DOES IT WORKS ?" />
+            <TextBlock Style="{StaticResource DialogTitleStyle}" Text="HOW DOES IT WORKS ?" />
             <TextBlock
                 Margin="12"
                 FontFamily="Segoe UI"
