--- a/MyerSplash/View/Uc/Dialog/NetworkDiagnosisDialog.xaml
+++ b/MyerSplash/View/Uc/Dialog/NetworkDiagnosisDialog.xaml
@@ -18,7 +18,7 @@
                 <TextBlock
                     Margin="12,12,0,0"
                     HorizontalAlignment="Left"
-                    FontSize="20"
+                    FontSize="{StaticResource DialogTitleFontSize}"
                     FontWeight="Bold"
                     Foreground="{StaticResource MyerSplashThemeColorBrush}"
                     Text="NETWORK DIAGNOSIS" />
