--- a/MyerSplashCustomControl/ContentPopupEx/ContentPopupEx.xaml
+++ b/MyerSplashCustomControl/ContentPopupEx/ContentPopupEx.xaml
@@ -92,7 +92,7 @@
                         </Grid.Resources>
                         <Border
                             x:Name="MaskBorder"
-                            Background="{ThemeResource SystemAltMediumColor}"
+                            Background="{ThemeResource SystemAltHighColor}"
                             Opacity="0"
                             Visibility="Collapsed" />
                         <Grid
