--- a/MyerSplash/View/Uc/PhotoDetailControl.xaml
+++ b/MyerSplash/View/Uc/PhotoDetailControl.xaml
@@ -66,7 +66,7 @@
         <Border
             x:Name="MaskBorder"
             Margin="-30"
-            Background="{ThemeResource SystemAltMediumColor}"
+            Background="{ThemeResource SystemAltHighColor}"
             ManipulationDelta="DetailGrid_ManipulationDelta"
             ManipulationMode="TranslateY"
             Tapped="MaskBorder_Tapped" />
