--- a/MyerSplash/View/Uc/DownloadsListControl.xaml
+++ b/MyerSplash/View/Uc/DownloadsListControl.xaml
@@ -52,6 +52,7 @@
             Grid.Row="1"
             Margin="2"
             attach:ScrollViewerStyleChanger.Style="{StaticResource ScrollViewerCommonStyle}"
+            FontFamily="Segoe MDL2 Assets"
             IncrementalLoadingTrigger="Edge"
             ItemsSource="{x:Bind DownloadsVM.DownloadingImages, Mode=OneWay}"
             MinItemHeight="220"
@@ -84,9 +85,10 @@
             <TextBlock
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
+                FontFamily="Segoe MDL2 Assets"
                 FontSize="20"
                 FontWeight="Light"
-                Foreground="#7FFFFFFF"
+                Foreground="{ThemeResource SystemBaseHighColor}"
                 Text="NO DOWNLOADS" />
         </StackPanel>
         <Button
