--- a/MyerSplash/View/Uc/SettingsControl.xaml
+++ b/MyerSplash/View/Uc/SettingsControl.xaml
@@ -3,14 +3,17 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:common="using:MyerSplash.Common"
+    xmlns:converter="using:MyerSplash.Converter"
     xmlns:cu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:fcu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
-    xmlns:framework="using:JP.Utils.Framework"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="700"
     d:DesignWidth="700"
     mc:Ignorable="d">
+    <UserControl.Resources>
+        <converter:BoolToVisibilityRevertConverter x:Key="converter" />
+    </UserControl.Resources>
     <Grid Background="{ThemeResource SystemControlChromeLowAcrylicElementBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="60" />
@@ -212,7 +215,14 @@
                         Background="{ThemeResource SystemListLowColor}"
                         Command="{x:Bind SettingsVM.ClearCacheCommand, Mode=OneWay}"
                         IsEnabled="{x:Bind SettingsVM.ClearCacheCommandEnabled, Mode=TwoWay}">
-                        <TextBlock Style="{StaticResource SettingItemButtonContentStyle}" Text="{x:Bind SettingsVM.CacheHint, Mode=OneWay}" />
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Style="{StaticResource SettingItemButtonContentStyle}" Text="{x:Bind SettingsVM.CacheHint, Mode=OneWay}" />
+                            <ProgressRing
+                                Margin="12,0,0,0"
+                                Foreground="{ThemeResource SystemBaseHighColor}"
+                                IsActive="True"
+                                Visibility="{x:Bind SettingsVM.ClearCacheCommandEnabled, Converter={StaticResource converter}, Mode=OneWay}" />
+                        </StackPanel>
                     </Button>
                     <TextBlock
                         Margin="12,12,12,0"
