--- a/MyerSplashCustomControl/Themes/Generic.xaml
+++ b/MyerSplashCustomControl/Themes/Generic.xaml
@@ -482,70 +482,10 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style TargetType="local:ToastService">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="local:ToastService">
-                    <Grid x:Name="RootGrid">
-                        <Grid.Resources>
-                            <Storyboard x:Name="ShowStory">
-                                <DoubleAnimationUsingKeyFrames Storyboard.TargetName="border" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)">
-                                    <EasingDoubleKeyFrame KeyTime="0" Value="40" />
-                                    <EasingDoubleKeyFrame KeyTime="0:0:0.4" Value="0">
-                                        <EasingDoubleKeyFrame.EasingFunction>
-                                            <CircleEase EasingMode="EaseOut" />
-                                        </EasingDoubleKeyFrame.EasingFunction>
-                                    </EasingDoubleKeyFrame>
-                                </DoubleAnimationUsingKeyFrames>
-                                <DoubleAnimationUsingKeyFrames Storyboard.TargetName="border" Storyboard.TargetProperty="(UIElement.Opacity)">
-                                    <EasingDoubleKeyFrame KeyTime="0" Value="0" />
-                                    <EasingDoubleKeyFrame KeyTime="0:0:0.4" Value="1">
-                                        <EasingDoubleKeyFrame.EasingFunction>
-                                            <CircleEase EasingMode="EaseOut" />
-                                        </EasingDoubleKeyFrame.EasingFunction>
-                                    </EasingDoubleKeyFrame>
-                                </DoubleAnimationUsingKeyFrames>
-                            </Storyboard>
-                            <Storyboard x:Name="HideStory">
-                                <DoubleAnimationUsingKeyFrames Storyboard.TargetName="border" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)">
-                                    <EasingDoubleKeyFrame KeyTime="0:0:0" Value="0" />
-                                    <EasingDoubleKeyFrame KeyTime="0:0:0.3" Value="50" />
-                                </DoubleAnimationUsingKeyFrames>
-                                <DoubleAnimationUsingKeyFrames Storyboard.TargetName="border" Storyboard.TargetProperty="(UIElement.Opacity)">
-                                    <EasingDoubleKeyFrame KeyTime="0:0:0" Value="1" />
-                                    <EasingDoubleKeyFrame KeyTime="0:0:0.3" Value="0" />
-                                </DoubleAnimationUsingKeyFrames>
-                            </Storyboard>
-                        </Grid.Resources>
-                        <Border
-                            x:Name="border"
-                            Margin="0,0,0,60"
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Bottom">
-                            <Border.RenderTransform>
-                                <CompositeTransform />
-                            </Border.RenderTransform>
-                            <Grid>
-                                <Border
-                                    Background="White"
-                                    CornerRadius="2"
-                                    Opacity="1" />
-                                <TextBlock
-                                    x:Name="ContentTB"
-                                    Margin="20,10"
-                                    FontSize="16"
-                                    Foreground="Black"
-                                    Text="{TemplateBinding ContentText}" />
-                            </Grid>
-                        </Border>
-                    </Grid>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="ms-appx:///MyerSplashCustomControl/ContentPopupEx/ContentPopupEx.xaml" />
         <ResourceDictionary Source="ms-appx:///MyerSplashCustomControl/Drawing/CustomCanvasControl.xaml" />
         <ResourceDictionary Source="ms-appx:///MyerSplashCustomControl/TopNavigationControl/TopNavigationControl.xaml" />
+        <ResourceDictionary Source="ms-appx:///MyerSplashCustomControl/ToastControl/ToastControl.xaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
