--- a/MyerSplashCustomControl/ContentPopupEx/ContentPopupEx.xaml
+++ b/MyerSplashCustomControl/ContentPopupEx/ContentPopupEx.xaml
@@ -1,7 +1,11 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:local="using:MyerSplashCustomControl">
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="ms-appx:///MyerSplashCustomControl/Themes/CommonStyles.xaml" />
+    </ResourceDictionary.MergedDictionaries>
     <Style TargetType="local:ContentPopupEx">
         <Setter Property="Template">
             <Setter.Value>
@@ -25,15 +29,15 @@
                                         </DiscreteObjectKeyFrame.Value>
                                     </DiscreteObjectKeyFrame>
                                 </ObjectAnimationUsingKeyFrames>
-                                <DoubleAnimationUsingKeyFrames Storyboard.TargetName="ContentGrid" Storyboard.TargetProperty="(UIElement.Opacity)">
+                                <DoubleAnimationUsingKeyFrames Storyboard.TargetName="RootPanel" Storyboard.TargetProperty="(UIElement.Opacity)">
                                     <LinearDoubleKeyFrame KeyTime="0" Value="0.075" />
                                     <LinearDoubleKeyFrame KeyTime="0:0:0.2" Value="1" />
                                 </DoubleAnimationUsingKeyFrames>
-                                <DoubleAnimationUsingKeyFrames Storyboard.TargetName="ContentGrid" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)">
+                                <DoubleAnimationUsingKeyFrames Storyboard.TargetName="RootPanel" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)">
                                     <EasingDoubleKeyFrame KeyTime="0" Value="1.2" />
                                     <EasingDoubleKeyFrame KeyTime="0:0:0.2" Value="1" />
                                 </DoubleAnimationUsingKeyFrames>
-                                <DoubleAnimationUsingKeyFrames Storyboard.TargetName="ContentGrid" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleY)">
+                                <DoubleAnimationUsingKeyFrames Storyboard.TargetName="RootPanel" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleY)">
                                     <EasingDoubleKeyFrame KeyTime="0" Value="1.2" />
                                     <EasingDoubleKeyFrame KeyTime="0:0:0.2" Value="1" />
                                 </DoubleAnimationUsingKeyFrames>
@@ -61,22 +65,22 @@
                                         </DiscreteObjectKeyFrame.Value>
                                     </DiscreteObjectKeyFrame>
                                 </ObjectAnimationUsingKeyFrames>
-                                <DoubleAnimationUsingKeyFrames Storyboard.TargetName="ContentGrid" Storyboard.TargetProperty="(UIElement.Opacity)">
+                                <DoubleAnimationUsingKeyFrames Storyboard.TargetName="RootPanel" Storyboard.TargetProperty="(UIElement.Opacity)">
                                     <SplineDoubleKeyFrame KeyTime="0" Value="1" />
                                     <SplineDoubleKeyFrame KeyTime="0:0:0.2" Value="0.075" />
                                     <EasingDoubleKeyFrame KeyTime="0:0:0.3" Value="0" />
                                 </DoubleAnimationUsingKeyFrames>
-                                <DoubleAnimationUsingKeyFrames Storyboard.TargetName="ContentGrid" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)">
+                                <DoubleAnimationUsingKeyFrames Storyboard.TargetName="RootPanel" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)">
                                     <SplineDoubleKeyFrame KeyTime="0" Value="1" />
                                     <SplineDoubleKeyFrame KeyTime="0:0:0.2" Value="1.2" />
                                     <EasingDoubleKeyFrame KeyTime="0:0:0.3" Value="1.2" />
                                 </DoubleAnimationUsingKeyFrames>
-                                <DoubleAnimationUsingKeyFrames Storyboard.TargetName="ContentGrid" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleY)">
+                                <DoubleAnimationUsingKeyFrames Storyboard.TargetName="RootPanel" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleY)">
                                     <SplineDoubleKeyFrame KeyTime="0" Value="1" />
                                     <SplineDoubleKeyFrame KeyTime="0:0:0.2" Value="1.2" />
                                     <EasingDoubleKeyFrame KeyTime="0:0:0.3" Value="1.2" />
                                 </DoubleAnimationUsingKeyFrames>
-                                <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentGrid" Storyboard.TargetProperty="(UIElement.Visibility)">
+                                <ObjectAnimationUsingKeyFrames Storyboard.TargetName="RootPanel" Storyboard.TargetProperty="(UIElement.Visibility)">
                                     <DiscreteObjectKeyFrame KeyTime="0:0:0.2">
                                         <DiscreteObjectKeyFrame.Value>
                                             <Visibility>Visible</Visibility>
@@ -95,15 +99,17 @@
                             Background="{ThemeResource SystemAltHighColor}"
                             Opacity="0"
                             Visibility="Collapsed" />
-                        <Grid
-                            x:Name="ContentGrid"
+                        <controls:DropShadowPanel
+                            x:Name="RootPanel"
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
-                            RenderTransformOrigin="0.5 0.5">
-                            <Grid.RenderTransform>
+                            RenderTransformOrigin="0.5 0.5"
+                            Style="{StaticResource DropShadowStyle}">
+                            <Grid x:Name="ContentGrid" />
+                            <controls:DropShadowPanel.RenderTransform>
                                 <CompositeTransform />
-                            </Grid.RenderTransform>
-                        </Grid>
+                            </controls:DropShadowPanel.RenderTransform>
+                        </controls:DropShadowPanel>
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
