--- a/MyerSplash/View/Page/MainPage.xaml
+++ b/MyerSplash/View/Page/MainPage.xaml
@@ -7,6 +7,7 @@
     xmlns:attach="using:JP.Utils.Framework"
     xmlns:cc="using:MyerSplashCustomControl"
     xmlns:common="using:MyerSplash.Common"
+    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:cu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:fcu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
@@ -52,8 +53,18 @@
                 Command="{x:Bind MainVM.RefreshCommand, Mode=OneWay}"
                 Style="{StaticResource FabStyle}"
                 ToolTipService.ToolTip="Refresh">
-                <Grid Width="60" Height="60">
-                    <cc:EllipseShadowControl Style="{StaticResource MainFabStyle}" />
+                <Grid>
+                    <controls:DropShadowPanel
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Style="{StaticResource DropShadowStyle}">
+                        <Ellipse
+                            Width="40"
+                            Height="40"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Fill="White" />
+                    </controls:DropShadowPanel>
                     <FontIcon
                         FontFamily="Segoe MDL2 Assets"
                         FontSize="{StaticResource MediumFontSize}"
