--- a/MyerSplash/View/Uc/PhotoDetailControl.xaml
+++ b/MyerSplash/View/Uc/PhotoDetailControl.xaml
@@ -2,6 +2,7 @@
     x:Class="MyerSplash.View.Uc.PhotoDetailControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:flipper="using:FlipperControl"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -332,11 +333,20 @@
                     Command="{x:Bind CurrentImage.ShareCommand, Mode=OneWay}"
                     Style="{StaticResource ButtonCommonStyle}">
                     <Grid>
-                        <Ellipse Width="40" Height="40">
-                            <Ellipse.Fill>
-                                <SolidColorBrush Color="{StaticResource MyerSplashUnLikedHeartColor}" />
-                            </Ellipse.Fill>
-                        </Ellipse>
+                        <controls:DropShadowPanel
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Style="{StaticResource DropShadowStyle}">
+                            <Ellipse
+                                Width="40"
+                                Height="40"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center">
+                                <Ellipse.Fill>
+                                    <SolidColorBrush Color="{StaticResource MyerSplashUnLikedHeartColor}" />
+                                </Ellipse.Fill>
+                            </Ellipse>
+                        </controls:DropShadowPanel>
                         <FontIcon
                             x:Name="ShareontIcon"
                             FontFamily="Segoe MDL2 Assets"
@@ -371,10 +381,15 @@
                                 Click="OKBtn_Click"
                                 Style="{StaticResource ButtonCommonStyle}">
                                 <Grid>
-                                    <Ellipse
-                                        Width="50"
-                                        Height="50"
-                                        Fill="Black" />
+                                    <controls:DropShadowPanel
+                                        HorizontalAlignment="Center"
+                                        VerticalAlignment="Center"
+                                        Style="{StaticResource DropShadowStyle}">
+                                        <Ellipse
+                                            Width="50"
+                                            Height="50"
+                                            Fill="Black" />
+                                    </controls:DropShadowPanel>
                                     <FontIcon
                                         FontFamily="Segoe MDL2 Assets"
                                         FontSize="15"
@@ -395,11 +410,16 @@
                                 Click="OKBtn_Click"
                                 Style="{StaticResource ButtonCommonStyle}">
                                 <Grid>
-                                    <!--<local:EllipseShadowControl Radius="25" />-->
-                                    <Ellipse
-                                        Width="50"
-                                        Height="50"
-                                        Fill="Black" />
+                                    <controls:DropShadowPanel
+                                        HorizontalAlignment="Center"
+                                        VerticalAlignment="Center"
+                                        Style="{StaticResource DropShadowStyle}">
+                                        <Ellipse
+                                            Width="50"
+                                            Height="50"
+                                            Fill="Black" />
+                                    </controls:DropShadowPanel>
+
                                     <FontIcon
                                         FontFamily="Segoe MDL2 Assets"
                                         Foreground="White"
@@ -421,11 +441,15 @@
                                     IsEnabled="True"
                                     Style="{StaticResource ButtonCommonStyle}">
                                     <Grid>
-                                        <!--<local:EllipseShadowControl Radius="25" />-->
-                                        <Ellipse
-                                            Width="50"
-                                            Height="50"
-                                            Fill="{StaticResource DownloadingColorBrush}" />
+                                        <controls:DropShadowPanel
+                                            HorizontalAlignment="Center"
+                                            VerticalAlignment="Center"
+                                            Style="{StaticResource DropShadowStyle}">
+                                            <Ellipse
+                                                Width="50"
+                                                Height="50"
+                                                Fill="{StaticResource DownloadingColorBrush}" />
+                                        </controls:DropShadowPanel>
                                         <FontIcon
                                             FontFamily="Segoe MDL2 Assets"
                                             FontSize="15"
@@ -471,13 +495,14 @@
                                 Click="DownloadBtn_Click"
                                 Style="{StaticResource ButtonCommonStyle}">
                                 <Grid>
-                                    <!--<local:EllipseShadowControl Radius="25" />-->
-                                    <Ellipse
-                                        Width="50"
-                                        Height="50"
-                                        HorizontalAlignment="Center"
-                                        VerticalAlignment="Center"
-                                        Fill="{StaticResource MyerSplashThemeColorBrush}" />
+                                    <controls:DropShadowPanel Style="{StaticResource DropShadowStyle}" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                        <Ellipse
+                                            Width="50"
+                                            Height="50"
+                                            HorizontalAlignment="Center"
+                                            VerticalAlignment="Center"
+                                            Fill="{StaticResource MyerSplashThemeColorBrush}" />
+                                    </controls:DropShadowPanel>
                                     <FontIcon
                                         FontFamily="Segoe MDL2 Assets"
                                         Foreground="White"
